--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-icon-last">
+                    <a href="" class="team-icon">
                       <svg class="team-soc-icons" width="20" height="20">
                         <use href="./images/icons/symbol-defs.svg#icon-link"></use>
                       </svg>
@@ -202,7 +202,7 @@
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-icon-last">
+                    <a href="" class="team-icon">
                       <svg class="team-soc-icons" width="20" height="20">
                         <use href="./images/icons/symbol-defs.svg#icon-link"></use>
                       </svg>
@@ -239,7 +239,7 @@
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-icon-last">
+                    <a href="" class="team-icon">
                       <svg class="team-soc-icons" width="20" height="20">
                         <use href="./images/icons/symbol-defs.svg#icon-link"></use>
                       </svg>
@@ -276,7 +276,7 @@
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-icon-last">
+                    <a href="" class="team-icon">
                       <svg class="team-soc-icons" width="20" height="20">
                         <use href="./images/icons/symbol-defs.svg#icon-link"></use>
                       </svg>
